welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:2: error: identifier expected but '(' found.
	var max = nums.(0)
                       ^